<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Gallery
        android:id="@+id/gallery"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true" />

    <AutoCompleteTextView
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gallery"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/ph_num_hider"
        android:dropDownSelector="@android:color/darker_gray"
        android:inputType="phone"
        android:maxLength="11" />

    <TextView
        android:id="@+id/tv_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="15dp"
        android:text="@string/sex"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/rg_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_sex"
        android:layout_toRightOf="@id/tv_sex"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/rb_unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_interest01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_sex"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/tv_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest"
            android:textSize="22sp" />

        <CheckBox
            android:id="@+id/cb_reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading" />

        <CheckBox
            android:id="@+id/cb_singing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singing" />

        <CheckBox
            android:id="@+id/cb_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_interest02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_interest01"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="0dp" >

        <CheckBox
            android:id="@+id/cb_playgame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="66dp"
            android:text="@string/playgame" />

        <CheckBox
            android:id="@+id/cb_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_interest02"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_address"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/ok"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_quit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/quit"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>